fear(rest): add Checkout Process Endpoint
